# gratia-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO-GUIDE.md  HANDOFF.md  README.md
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
app/android/: build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
app/android/src/main/: AndroidManifest.xml
app/android/src/main/kotlin/io/gratia/app/: GratiaApplication.kt  MainActivity.kt
app/android/src/main/kotlin/io/gratia/app/bridge/: GratiaCore.kt
app/android/src/main/kotlin/io/gratia/app/security/: AddressBook.kt  HardwareKeystore.kt  LockScreen.kt  SecurityManager.kt
app/android/src/main/kotlin/io/gratia/app/sensors/: AccelerometerManager.kt  BarometerManager.kt  BatteryManager.kt  BluetoothManager.kt  ConnectivityDetector.kt  GpsManager.kt  LightSensorManager.kt  MagnetometerManager.kt  NfcManager.kt  SensorEventListener.kt  WifiManager.kt
app/android/src/main/kotlin/io/gratia/app/service/: BootReceiver.kt  MiningService.kt  NfcTransactService.kt  NotificationHelper.kt  ProofOfLifeService.kt
app/android/src/main/kotlin/io/gratia/app/ui/: CsvExport.kt  GovernanceScreen.kt  HapticFeedback.kt  LuxScreen.kt  MiningScreen.kt  NetworkScreen.kt  OnboardingScreen.kt  QrScannerScreen.kt  SettingsScreen.kt  SplashScreen.kt  ViewModels.kt  WalletScreen.kt
app/android/src/main/kotlin/io/gratia/app/widget/: GratiaWidget.kt
app/android/src/main/kotlin/uniffi/gratia_ffi/: gratia_ffi.kt
app/android/src/main/res/drawable/: ic_gratia_logo.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/android/src/main/res/layout/: widget_gratia.xml
app/android/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/android/src/main/res/xml/: file_paths.xml  gratia_widget_info.xml  nfc_aid_list.xml
app/ios/Gratia/: Gratia.entitlements  GratiaApp.swift  Info.plist  project.yml
app/ios/Gratia/Sources/Bridge/: GratiaCoreManager.swift
app/ios/Gratia/Sources/Sensors/: BarometerManager.swift  BatteryManager.swift  BluetoothManager.swift  LightSensorManager.swift  LocationManager.swift  MagnetometerManager.swift  MotionManager.swift  NfcManager.swift  WifiManager.swift
app/ios/Gratia/Sources/Service/: MiningService.swift  ProofOfLifeService.swift
app/ios/Gratia/Sources/UI/: GovernanceView.swift  MiningView.swift  NetworkView.swift  SettingsView.swift  WalletView.swift
contracts/templates/: location_trigger.gs  poll.gs  presence_verification.gs  proximity_escrow.gs
crates/gratia-bootstrap/: Cargo.toml
crates/gratia-bootstrap/src/: main.rs
crates/gratia-consensus/: Cargo.toml
crates/gratia-consensus/src/: block_production.rs  committee.rs  lib.rs  sharded_consensus.rs  streamlet.rs  sync.rs  validation.rs  vrf.rs
crates/gratia-consensus/tests/: network_partition.rs  phone_farm_simulation.rs  sybil_resistance.rs
crates/gratia-core/: Cargo.toml
crates/gratia-core/src/: config.rs  crypto.rs  emission.rs  error.rs  lib.rs  mempool.rs  types.rs
crates/gratia-ffi/: Cargo.toml
crates/gratia-ffi/src/: convert.rs  lib.rs
crates/gratia-governance/: Cargo.toml
crates/gratia-governance/src/: error.rs  lib.rs  polling.rs  proposals.rs  voting.rs
crates/gratia-lux/: Cargo.toml
crates/gratia-lux/src/: feed.rs  fees.rs  lib.rs  moderation.rs  store.rs  types.rs
crates/gratia-network/: Cargo.toml
crates/gratia-network/src/: bft_protocol.rs  discovery.rs  error.rs  gossip.rs  lib.rs  mesh.rs  reputation.rs  sync.rs  sync_protocol.rs  transport.rs
crates/gratia-pol/: Cargo.toml
crates/gratia-pol/src/: behavioral.rs  behavioral_anomaly.rs  clustering.rs  collector.rs  lib.rs  scoring.rs  tee.rs  trust.rs  validator.rs
crates/gratia-simulator/: Cargo.toml
crates/gratia-simulator/src/: main.rs  network.rs  node.rs  scenarios.rs
crates/gratia-staking/: Cargo.toml
crates/gratia-staking/src/: error.rs  lib.rs  pool.rs  rewards.rs  slashing.rs
crates/gratia-state/: Cargo.toml
crates/gratia-state/src/: db.rs  lib.rs  merkle.rs  pruning.rs  sharding.rs
crates/gratia-tests/: Cargo.toml
crates/gratia-tests/src/: behavioral_spoofing.rs  lib.rs  network_partition.rs  phone_farm_attack.rs  stake_manipulation.rs  sybil_resistance.rs  sync_protocol.rs
crates/gratia-vm/: Cargo.toml
crates/gratia-vm/src/: gas.rs  host_functions.rs  interpreter.rs  lib.rs  runtime.rs  sandbox.rs
crates/gratia-vm/tests/: stress_tests.rs
crates/gratia-wallet/: Cargo.toml
crates/gratia-wallet/src/: keystore.rs  lib.rs  nfc.rs  recovery.rs  transactions.rs
crates/gratia-wallet/tests/: transaction_flow.rs
crates/gratia-zk/: Cargo.toml
crates/gratia-zk/src/: bulletproofs.rs  groth16.rs  lib.rs  pedersen.rs  shielded_tx.rs
crates/gratiascript/: Cargo.toml
crates/gratiascript/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs  typechecker.rs
crates/gratiascript/tests/: e2e.rs
docs/: bootstrap-deployment.md  gratia-explainer.md  security-specification.md  whitepaper-v0.4.md  whitepaper-v0.5.md  whitepaper-v0.6.md  whitepaper-v1.0.md
docs/operations/: BOOTSTRAP-NODES.md
docs/research/: competitive-analysis.md
docs/security/: KNOWN-VULNERABILITIES.md
docs/technical-spec/: PROTOCOL-SPEC.md  committee-scaling.md  geographic-sharding.md  network-storage.md  security-architecture.md  sybil-economic-model.md  threat-model.md  tokenomics.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bft_signature.rs  fuzz_block_validate.rs  fuzz_bulletproofs_generate.rs  fuzz_committee_selection.rs  fuzz_gossip_deserialize.rs  fuzz_node_announcement.rs  fuzz_sync_protocol.rs  fuzz_transaction_validate.rs  fuzz_zk_proof_verify.rs
scripts/: build-android.sh  deploy-bootstrap.sh
tests/security/: behavioral_spoofing.rs  emulator_detection.rs  stake_manipulation.rs
tests/simulation/: network_partition.rs  sybil_resistance.rs
web/explorer/: README.md  app.js  index.html  style.css  styles.css
web/site/: capture.mjs  index.html  mockup-mining.html  mockup-wallet.html  style.css
(+3 files in other folders)
