[workspace]
resolver = "2"
members = [
    "crates/gratia-core",
    "crates/gratia-pol",
    "crates/gratia-consensus",
    "crates/gratia-wallet",
    "crates/gratia-zk",
    "crates/gratia-staking",
    "crates/gratia-governance",
    "crates/gratia-vm",
    "crates/gratia-network",
    "crates/gratia-state",
    "crates/gratia-ffi",
    "crates/gratiascript",
    "crates/gratia-bootstrap",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gratia-network/gratia"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
x25519-dalek = "2.0"
curve25519-dalek = { version = "4.1", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"

# Zero-knowledge proofs
bulletproofs = "5.0"
merlin = "3.0"

# Networking
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "kad", "quic", "noise", "identify", "mdns", "macros"] }

# Storage
rocksdb = "0.22"

# WASM runtime (smart contracts)
wasmer = "4.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# Bytes
bytes = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
