[package]
name = "gratia-bootstrap"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gratia-bootstrap"
path = "src/main.rs"

[dependencies]
gratia-core = { path = "../gratia-core" }
gratia-network = { path = "../gratia-network" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = { workspace = true }
