[package]
name = "gratia-ffi"
description = "Gratia protocol - UniFFI bridge for mobile (Android/iOS)"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# UniFFI for generating Kotlin (Android) and Swift (iOS) bindings
uniffi = { version = "0.28", features = ["cli"] }

# Internal crates
gratia-core = { path = "../gratia-core" }
gratia-wallet = { path = "../gratia-wallet" }
gratia-pol = { path = "../gratia-pol" }
gratia-staking = { path = "../gratia-staking" }
gratia-governance = { path = "../gratia-governance" }
gratia-network = { path = "../gratia-network" }
gratia-consensus = { path = "../gratia-consensus" }
gratia-state = { path = "../gratia-state" }
gratia-vm = { path = "../gratia-vm" }
gratia-zk = { path = "../gratia-zk" }
gratia-lux = { path = "../gratia-lux" }
gratiascript = { path = "../gratiascript" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
