[package]
name = "gratia-governance"
description = "Gratia protocol - one-phone-one-vote governance, proposals, and on-chain polling"
version.workspace = true
edition.workspace = true

[dependencies]
gratia-core = { path = "../gratia-core" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
