[package]
name = "gratia-network"
description = "Gratia protocol - Peer-to-peer networking via libp2p"
version.workspace = true
edition.workspace = true

[dependencies]
gratia-core = { path = "../gratia-core" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
bytes = { workspace = true }
