[package]
name = "gratia-pol"
description = "Gratia protocol - gratia-pol"
version.workspace = true
edition.workspace = true

[dependencies]
gratia-core = { path = "../gratia-core" }
gratia-zk = { path = "../gratia-zk" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
