[package]
name = "gratia-staking"
description = "Gratia protocol - gratia-staking"
version.workspace = true
edition.workspace = true

[dependencies]
gratia-core = { path = "../gratia-core" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
